--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div id="navbar">
     <ul>
         <li><a href="./index.html">Home</a></li>
-        <li><a href="#about-me">About me</a></li>
-        <li><a href="#portfolio"> Porfolio</a></li>
-        <li><a href="./blog.html">Blog</a></a></li>
+        <li><a href="./portfolio.html"> Porfolio</a></li>
+        <li><a href="./blog.html">Blog</a></li>
+        <li><a href="./contact.html">Contact</a></li>
     </ul>
     </div>
     <div id="main">
