--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
     <ul>
         <li><a href="./index.html">Home</a></li>
         <li><a href="#about-me">About me</a></li>
-        <li><a href="#portfolio"> Porfolio</a></li>
+        <li><a href="./portfolio.html"> Porfolio</a></li>
         <li><a href="./blog.html">Blog</a></a></li>
     </ul>
     </div>
