--- a/index.html
+++ b/index.html
@@ -1,70 +1,154 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Jose Gamez website </title>
-        <style> 
-            body{
-                cursor:URL(http://www.rw-designer.com/icon-view/7828.png), auto;
-            }
-            #navbar{
-                background-color:rgb(9, 21, 156);
-            }
-            a{
-                color:rgb(255, 255, 255);
-            }
-            body{
-                color:rgb(255, 255, 255);
-                background-color:rgb(97, 4, 97);
-            }
-            .image{
-                float: right;
-                font-style: italic;
-                color: lightgray;
-            }
-        </style>
-    </head>
-    <body>
-        <div id="navbar">
-    <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./portfolio.html"> Porfolio</a></li>
-        <li><a href="./blog.html">Blog</a></li>
-        <li><a href="./contact.html">Contact</a></li>
-    </ul>
-    </div>
-    <div id="main">
-        <h1 id="home">Jose Gamez</h1>
-    <div class="image">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/3/32/Purple_Sky_(2779915114).jpg" width="300" alt="Dark sky that looks purple">
-    <div>Founding 9th grade student at Alpha Highschool</div>
-    </div>
-        <h2 id="about-me">About me</h2>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-            I am a 14 year old boy who spends most of is time either at school or at his home. 
-            At home I really don't do much. 
-            Once in a while when mom asks me to do something I'll do it but other than that that nothing much.
-            I basically spend all my free time eitherr watching shows or what ever or maybe sometimes I just lay in bed and listen to music for a long time.
-            I <em>love</em> music so much. 
-            Music has so much meaning to it that I just <em>love</em> it so, so much.</p>
-        <h2>What I Want for My Future</h2>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            When I'm older I might move to Washington State just cause I <em>love</em> it over there.
-            I also want to complete college. 
-            Obviously before I move over to Washington state.
-            While I'm in college I would love to learn about computer scinece or anything around that subject. 
-            If I can't do that I would choose engineering.
-            I have nothing else planned.
-            That is all I have thought about so far.</p>
+<head>
+  <!-- TODO: Update Title -->
+  <title>Jose Gamez's Web Page</title>
+  
+  <!-- Include the following stylesheet (controls sytle of navbar and footer) -->
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
+  
+  <!-- TODO: Change CSS colors and image so that it matches your desired theme -->
+  <style>
+    body {
+      font-family: Verdana;
+      background-color:#C2C2C2;
+    }
     
-        <h2 id="portfolio">Portfolio</h2>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>
-            <strong>School,</strong></em> I guess you can say I don't like it but I still try my hardest. 
-            I don't have bad grades, but you can't call them great.
-            Most of my grades are A's and B's, then theres the occasional C, sometimes even an F. 
-            Can't help it, I guess, still I try hard so those grades won't affect my grades by a lot.</p>
+    /* TODO: Make sure the height of your page is big enough */
+    .main {
+      clear: left;
+      min-width: 600px;
+      max-width: 800px;
+      height:650px;
+      margin:0 auto;
+    }
+
+    .main-page{
+      display: block;
+      float:right;
+      background-color:	#87CEFA;
+      height:100%;
+      width:75%;
+      box-sizing:border-box;
+    }
+
+    .sidebar {
+      box-sizing:border-box;
+      padding:10px;
+      float:left;
+      width:25%;
+      height:100%;
+      background-color:#008080;
+    }
+
+    .sidebar-nav{
+      margin: 15px 0px;
+      color:#FFFFFF;
+    }
+
+    .sidebar li {
+      margin: 20px 5px 0px;
+    }
+
+    .sidebar ul ul li{
+      margin: 10px 15px 0px;
+      font-size:0.8em;
+    }
+
+    .sidebar ul ul li a{
+      text-decoration: none;
+      color: #FFFFFF;
+    }
+
+    .sidebar ul ul li a:hover{
+      color: #F26101;
+    }
+
+    .image-container {
+      height:300px;
+      width:100%;
+      position: relative;
+      /* TODO: Update the following image */
+      background-image: url("http://i.imgur.com/Ug8WHf7.jpg");
+      background-repeat: no-repeat;
+      background-size: 100% 300px;
+    }
+
+    .main-title {
+      margin: 10px 15px;
+      font-size: 30px;
+    }
+
+    .left-panel{
+      box-sizing: border-box;
+      width: 50%;
+      float:left;
+      padding:20px;
+    }
+
+    .right-panel{
+      box-sizing: border-box;
+      width: 50%;
+      float:left;
+      padding:20px;
+    }
+
+    .sub-title {
+      text-align: center;
+    }
+
+    .text-info {
+      font-size: 0.8em;
+      margin: 20px;
+    }
+
+  </style>
+</head>
+<body>
+    <div class="navbar">
+        <ul class="navigation">
+            <!-- TODO: Ensure that your Navbar is correct -->
+            <li><a href="./index.html">Home</a></li>
+            <li class="active"><a href="./portfolio.html">Portfolio</a></li>
+            <ul class="navigation">
+            <li class="active"><a href="./blog.html">Blog</a></li>
+            <ul class="navigation">
+            <li class="active"><a href="./contact.html">Contact</a></li>
+            <ul class="navigation">
+        </ul>
+    </div>
+
+    <div class="main">
+        <div class="sidebar">
+            <ul class="sidebar-nav">
+                <!-- TODO: Update the recent projects -->
+                <li><strong>Recent Projects</strong></li>
+                <ul>
+                    <li><a href="./portfolio.html">Shooting Star</a></li>
+                    <li><a href="./portfolio.html">Maze Game</a></li>
+                </ul>
+            </ul>
         </div>
+        <div class="main-page">
+            <div class="image-container"></div>
+            
+            <!-- TODO: Update the page title -->
+            <h1 class="main-title">Jose Gamez's Homepage</h1>
+            <!-- TODO: Update the left-panel and right-panel with info from your 90s website -->
+            <div class="left-panel">
+                <h2 class="sub-title">My Background</h2>
+                  <p class="text-info">I was born in San Jose, California
+            </div>
+            <div class="right-panel">
+                <h2 class="sub-title">What I Do Now</h2>
+                <p class="text-info">I am a freshmen in Alpha: Cindy Avitia a
+            </div>
 
+            </div>
+        <!-- TODO: Add anything you want to the footer -->
+        <div class="footer">
+        </div>
+    </div>
 
-    </body>
+</body>
 </html>
