Design a Band 2nd

--- a/design_a_band.html
+++ b/design_a_band.html
@@ -130,6 +130,9 @@
     </p>
     
     <p>
+      The name of thier band came from Marts and Danis name being put together which is Marti, it was suppose to be with two I's but the making of the album cover wet wrong throughout the way. Then the name of this cover was inspired my Mart's parents. Mostly his mother, it wasn't that she was adopted it was mostly just because she grew up quick. For her it seemed as she hd no parents to actually take care of her mostly because they where working al the time. Well that's what they said. She felt as if her parents just abandoned her.
+    </p>
+    <p>
       And the rest, as they say, is history.
     </p>
   </div>
